hw08: реализован сервис лимитов (без интеграционных тестов и должного логирования)