@@ -26,7 +26,6 @@
             ${project.basedir}/src/main/resources/api/limit-service-rest-v1.yaml
         </openapi-spec>
         <openapi-generator-maven-plugin.version>7.3.0</openapi-generator-maven-plugin.version>
-        <find-and-replace-maven-plugin.version>1.1.0</find-and-replace-maven-plugin.version>
 
         <!-- Tests -->
         <testcontainers.version>1.19.8</testcontainers.version>
@@ -39,10 +38,7 @@
         <springdoc.version>2.5.0</springdoc.version>
 
         <!-- Other -->
-        <slf4j.version>2.0.13</slf4j.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.version>1.18.30</lombok.version>
-        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <annotations.version>3.0.1u2</annotations.version>
     </properties>
 
@@ -80,6 +76,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -168,11 +168,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${mapstruct.version}</version>
-        </dependency>
         <!--
             Зависимость решает проблему с непонятной ошибкой
             Cannot find annotation method 'when()' in type 'javax.annotation.Nonnull': class file for javax.annotation.Nonnull not found
@@ -218,35 +213,7 @@
                                     <artifactId>lombok</artifactId>
                                     <version>${lombok.version}</version>
                                 </path>
-                                <path>
-                                    <groupId>org.mapstruct</groupId>
-                                    <artifactId>mapstruct-processor</artifactId>
-                                    <version>${mapstruct.version}</version>
-                                </path>
-                                <dependency>
-                                    <groupId>org.projectlombok</groupId>
-                                    <artifactId>lombok-mapstruct-binding</artifactId>
-                                    <version>${lombok-mapstruct-binding.version}</version>
-                                </dependency>
                             </annotationProcessorPaths>
-                            <failOnWarning>true</failOnWarning>
-                            <compilerArgs>
-                                <arg>-Xlint:all,-unchecked,-serial,-processing</arg>
-                                <arg>-Amapstruct.defaultComponentModel=spring</arg>
-                                <arg>-Amapstruct.unmappedSourcePolicy=error</arg>
-                                <arg>-Amapstruct.unmappedTargetPolicy=error</arg>
-                                <arg>-Amapstruct.defaultInjectionStrategy=constructor</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
@@ -255,21 +222,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <environmentVariables>
-                        <TESTCONTAINERS_NEXUS_URL>docker.repo-ci.sfera.inno.local</TESTCONTAINERS_NEXUS_URL>
-                        <!--
-                            Важно! Слеш (/) обязательно должен быть на конце TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX
-                        -->
-                        <TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX>
-                            docker.repo-ci.sfera.inno.local/tbcv-docker/
-                        </TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX>
-                        <TESTCONTAINERS_CHECKS_DISABLE>true</TESTCONTAINERS_CHECKS_DISABLE>
-                        <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
-                    </environmentVariables>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${surefireArgLine} -Dfile.encoding=UTF-8</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openapitools</groupId>
@@ -307,62 +259,6 @@
                                     @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
                                 </additionalModelTypeAnnotations>
                             </configOptions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!--
-                При использовании JDK17, @Lombok.Builder и аннотированных типах в списках (так в частности делает openapi generator)
-                возникает ошибка компиляции java.lang.ArrayIndexOutOfBoundsException: Index 1 out of bounds for length 0
-                https://github.com/projectlombok/lombok/issues/2434
-                Ошибка устранена в более поздних версиях JDK.
-                У нас для решения проблемы используем плагин, чтобы удалить аннотации из списков автоматически сгенерированных объектов.
-
-                @see https://github.com/floverfelt/find-and-replace-maven-plugin
-            -->
-            <plugin>
-                <groupId>io.github.floverfelt</groupId>
-                <artifactId>find-and-replace-maven-plugin</artifactId>
-                <version>${find-and-replace-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>valid</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>find-and-replace</goal>
-                        </goals>
-                        <configuration>
-                            <!--
-                                Possible replacementType values: file-contents, filenames, directory-names.
-                                To run for multiple types, pass the values as a CSV list.
-                            -->
-                            <replacementType>file-contents</replacementType>
-                            <baseDir>
-                                target/generated-sources/main/java/src/main/java/org/example/dao/model/generated
-                            </baseDir>
-                            <findRegex><![CDATA[List<@Valid\s]]></findRegex>
-                            <replaceValue><![CDATA[List<]]></replaceValue>
-                            <recursive>true</recursive>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>size</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>find-and-replace</goal>
-                        </goals>
-                        <configuration>
-                            <!--
-                                Possible replacementType values: file-contents, filenames, directory-names.
-                                To run for multiple types, pass the values as a CSV list.
-                            -->
-                            <replacementType>file-contents</replacementType>
-                            <baseDir>
-                                target/generated-sources/main/java/src/main/java/org/example/dao/model/generated
-                            </baseDir>
-                            <findRegex><![CDATA[List<@Size\(max = 255\)]]></findRegex>
-                            <replaceValue><![CDATA[List<]]></replaceValue>
-                            <recursive>true</recursive>
                         </configuration>
                     </execution>
                 </executions>
